--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3.8'
 services:
   frontend:
-    build: 
+    build: ./international-weather-frontend
+    ports:
+      - 80:80
+    environment:
+      - PORT=80
+      - API_PROTOCOL="http:"
+      - API_HOST="localhost"
+      - API_PORT=8000
+      - API_MAX_REQUEST_TIMEOUT=30000
   backend:
-
+    build: ./international-weather-backend
+    ports:
+      - 8000:8000
+    environment:
+      - PORT=8000
+      - WEATHER_API_KEY="api_key"
